SERVER-20859 Propagate bypassDocumentValidation in cloneTo methods