src/mongo/s/write_ops/batched_insert_request.cpp
@@ -184,6 +184,8 @@ void BatchedInsertRequest::cloneTo(BatchedInsertRequest* other) const {
 
     other->_ordered = _ordered;
     other->_isOrderedSet = _isOrderedSet;
+
+    other->_shouldBypassValidation = _shouldBypassValidation;
 }
 
 std::string BatchedInsertRequest::toString() const {
